--- a/index.css
+++ b/index.css
@@ -141,3 +141,50 @@ a{
 	color: grey;
 }
 
+
+.form-details{
+	width:50%;
+	font-size:20px;
+	border-radius: 10px;
+	border-color: #f0a73a;
+	color:#f0a73a;
+	margin-left: 350px;
+}
+
+.input-box{
+	border-top: 0px;
+	border-left: 0px;
+	border-right: 0px;
+	border-bottom: 1px solid #f0a73a;
+	margin-left: 5px;
+}
+.select-items{
+	border-color: #f0a73a;
+	border-radius: 5px;
+	padding: 5px;
+	font-size: 12px;
+	color: grey;
+}
+
+.bottom{
+	background-color: black;
+	color:white;
+	display: flex;
+	justify-content: space-between;
+}
+.bottom-image{
+
+max-width: 300px;	
+}
+.icons-container{
+	font-family: Georgia;
+	font-size: 20px;
+	color: grey;
+	padding-left: 25px;
+}
+.bottom-title{
+	font-family: "Courier";
+	font-size: 28px;
+	color: grey;
+	text-decoration: underline;
+}
