--- a/index.css
+++ b/index.css
@@ -87,7 +87,7 @@ a{
 }
 
 .main-description{
-	padding: 30px;
+	padding: 0px 30px 30px 30px;
 }
 
 .home-heading{
@@ -173,6 +173,7 @@ a{
 	border-bottom: 1px solid #f0a73a;
 	margin-left: 5px;
 }
+
 .select-items{
 	border-color: #f0a73a;
 	border-radius: 5px;
@@ -187,16 +188,18 @@ a{
 	display: flex;
 	justify-content: space-between;
 }
-.bottom-image{
 
-max-width: 300px;	
+.bottom-image{
+	max-width: 300px;	
 }
+
 .icons-container{
 	font-family: Georgia;
 	font-size: 20px;
 	color: grey;
 	padding-left: 25px;
 }
+
 .bottom-title{
 	font-family: "Courier";
 	font-size: 28px;
@@ -204,28 +207,23 @@ max-width: 300px;
 	text-decoration: underline;
 }
 
-
 @media only screen and (max-width:600px){
-
-	body{
-		width:100%;
+	.top-container{
+		height:65px;
 	}
 	.header-links{
 		display: none;
 	}
-
 	.title-links{
 		font-size: 15px;
 	}
-
 	.rooms-desc{
 		flex-direction: column;
+		align-items: center;
 	}
-
 	.rooms-total-desc{
 		max-width: 100%;
 	}
-
 	.booking-button{
 		margin-top: 0px;
 		display: flex;
@@ -235,24 +233,20 @@ max-width: 300px;
 		font-size: 13px;
 		padding: 7px;
 	}
-
 	.card{
 		margin: 10px;
 		height: 200px;
 		width:260px;
 	}
-
 	.card-image{
 		height: 140px;
 		width:220px;
 		margin-top: 5px;
 		margin-bottom: 0px;
 	}
-
 	.card-price{
 		font-size: 15px;
 	}
-
 	.home-heading{
 		font-size: 23px;
 	}
@@ -260,45 +254,38 @@ max-width: 300px;
 		width:100%;
 		height: 100%;
 	}
-
 	.home-title{
 		font-size: 30px;
 	}
-
 	.home-description{
 		font-size: 12px;
 	}
-
 	.button{
 		height: 30px;
 		margin: 20px;
 		width:120px;
 		font-size: 14px;
 	}
-
 	.main-title{
 		font-size: 24px;
 	}
 	.home-para{
 		font-size: 13px;
 	}
-
 	.rooms-title{
 		font-size: 18px;
 	}
 	.form-details{
 		font-size: 15px;
-		min-width: 300px;
+		min-width: 310px;
+		margin-bottom: 20px;
 	}
-
 	.icons-container{
 		font-size: 15px;
 	}
-
 	.bottom-title{
 		font-size: 20px;
 	}
-
 	.bottom-image{
 		max-width: 170px;
 		height: 150px;
